# nova

./: .clang-format  CMakeLists.txt  README.md
common/: CMakeLists.txt  common.hpp
phyx/: CMakeLists.txt  celestial.hpp  config.hpp  gravity.cpp  gravity.hpp  rigid.hpp  shape.hpp
render/: CMakeLists.txt  render.cpp  render.hpp
